--- a/style.css
+++ b/style.css
@@ -1,26 +1,30 @@
-body{
+body {
     background-image: url(./bg.avif);
     background-repeat: no-repeat;
     background-size: cover;
     font-family: Arial, sans-serif;
     margin: 0;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .card {   
-    height: 80vh;
     margin: 60px auto;
     text-align: center;
     max-width: 780px;
     background-color: #e38484;
     border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    padding-top: 10px;
+    display: flex;
+    flex-direction: column;
+    padding: 0 5px 5px 5px;
 }
 
 .data {
-    max-width: 740px;
+    max-width: 780px;
     border: solid 1px #000000;
-    height: 60vh;
+    max-height: 65vh;
     overflow-y: scroll;
     scrollbar-width: thin;
     scrollbar-color: #888 #e38484;
@@ -30,7 +34,18 @@ body{
 table {
     border: solid 1px #000000;
     text-align: center;
-    width: 100%;
+    padding: 5px;
+}
+
+.table-header {
+    background-color: #e95454;
+    position: sticky;
+    top: 0;
+    left: 0;
+}
+
+tbody {
+    background-color: #e38484;
 }
 
 td {
@@ -38,44 +53,5 @@ td {
 }
 
 h1 {
-    font-size: 24px;
-    margin-bottom: 10px;
-}
-
-@media screen and (max-width: 425px) {
-    .card {
-        margin: 20px auto;
-    }
-
-    .data {
-        height: 340px;
-    }
-
-    table {
-        font-size: 14px;
-    }
-}
-
-@media screen and (max-width: 517px) {
-    .card {
-        margin: 20px auto;
-    }
-
-    .data {
-        height: 340px;
-    }
-}
-
-@media screen and (max-width: 321px) {
-    h1{
-        font-size: 18px;
-        padding: 0 10px 0 10px;
-    }
-
-    h4{
-        font-size: 10px;
-    }
-    .data {
-        height: 380px;
-    }
+    font-size: 18px;
 }
